Fixed list items width and added gap between text and icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,11 +144,12 @@ li.edit-mode {
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  width: 45%;
+  min-width: 45%;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px 15px;
   margin: 0 5px 20px;
+  gap: 10px;
 }
 
 /* Media queries */
